# HandGesture

./: .gitignore  CMakeLists.txt  HandGesture.pro  README.md
conf/: configure.json
features/gesture/: gestureFeatureFile.yml  gestureFile.txt
images/: README.md
others/: FaceDetection.cpp
others/featurefile/: gestureFeatureFile.yml  gestureFile.txt  hand.xml
others/fingertips/: fingertips.cpp
source/: handgesturedialog.cpp  handgesturedialog.h  handgesturedialog.ui  main.cpp
source/filter/: imagefilterdlg.cpp  imagefilterdlg.h  imagefilterdlg.ui
source/gesture/: AIGesture.cpp  AIGesture.h  GestrueInfo.cpp  GestrueInfo.h  GestureStruct.h
source/ui/: threshold.cpp  threshold.h  threshold.ui  ui_threshold.h
source/utils/: jsoncpp.cpp  log.cpp  log.h  utils.cpp  utils.h
source/video/: handgesturedialog.cpp  handgesturedialog.h  handgesturedialog.ui  stronglabel.cpp  stronglabel.h
